--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,125 @@
+/* ==========================================================================
+   General styles and variables.
+   ========================================================================== */
+
+:root {
+  --main-text-color: #824670;
+  --main-bg-color: azure;
+}
+
 body {
-  padding: 50px;
+  padding: 0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+a {text-decoration: none; color: var(--main-text-color)}
+a:visited {color: var(--main-text-color)}
+a:hover {color: var(--main-text-color)}
+a:active {color: var(--main-text-color)}
+
+/* ==========================================================================
+   Main header styles.
+   ========================================================================== */
+
+.brand-header {
+  display: flex;
+  justify-content: center;
+  border-bottom: 3px solid var(--main-text-color);
+  background-color: var(--main-bg-color);
 }
+
+.brand-header__text {
+  color: var(--main-text-color);
+}
+
+/* ==========================================================================
+   Index page grid styles.
+   ========================================================================== */
+.index-grid-container {
+  display: grid;
+  margin: auto;
+}
+
+.index-grid-container__cell {
+  background-color: var(--main-bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.index-grid-container__cell__title {
+  margin: 10px;
+  color: var(--main-text-color);
+  text-decoration: underline;
+}
+
+.index-grid-container__cell__body {
+  margin: 10px;
+  color: var(--main-text-color);
+  text-align: center;
+}
+
+/* ==========================================================================
+   Media queries for different breakpoints.
+   ========================================================================== */
+   
+@media (max-width: 600px){
+  /* Index page grid styles.
+   ========================================================================== */
+  .index-grid-container {
+    display: grid;
+    grid-row-gap: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+   .index-grid-container__cell {
+    border-top: 3px solid var(--main-text-color);
+    border-bottom: 3px solid var(--main-text-color);
+  }
+  .index-grid-container__cell__title {
+    font-size: 1.4em;
+  }
+}
+@media (min-width: 601px) and (max-width: 1023px) {
+  /* Index page grid styles.
+   ========================================================================== */
+  .index-grid-container {
+    display: grid;
+    grid-gap: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    grid-template-columns: 230px 230px;
+    grid-template-rows: 230px 230px;
+    justify-content: center;
+  }
+  .index-grid-container__cell { 
+    border: 3px solid var(--main-text-color);
+    height: 100%;
+  }
+  .index-grid-container__cell__title {
+    font-size: 1.4em;
+  }
+}
+@media (min-width: 1024px) {
+  /* Index page grid styles.
+   ========================================================================== */
+  .index-grid-container {
+    display: grid;
+    grid-gap: 70px;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    grid-template-columns: 400px 400px;
+    grid-template-rows: 250px 250px;
+    justify-content: center;
+  }
+  .index-grid-container__cell {
+    border: 3px solid var(--main-text-color);
+    height: 100%;
+  }
+  .index-grid-container__cell__title {
+    font-size: 1.6em;
+  }
+}
+  
