--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href="/")
+      header(class="brand-header")
+        h1(class="brand-header__text") Restaurant POS
+
     block content
