Added read menu functionality.

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  h1(style="text-align: center") An error has occurred.
+  h2(style="text-align: center") Error 404: Resource not found.
