--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,42 +1,9 @@
-/* ==========================================================================
-   General styles and variables.
-   ========================================================================== */
-
-:root {
-  --main-text-color: #824670;
-  --main-bg-color: azure;
-}
-
-body {
-  padding: 0;
-  margin: 0;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {text-decoration: none; color: var(--main-text-color)}
-a:visited {color: var(--main-text-color)}
-a:hover {color: var(--main-text-color)}
-a:active {color: var(--main-text-color)}
+@import "variables.css";
 
 /* ==========================================================================
-   Main header styles.
-   ========================================================================== */
-
-.brand-header {
-  display: flex;
-  justify-content: center;
-  border-bottom: 3px solid var(--main-text-color);
-  background-color: var(--main-bg-color);
-}
-
-.brand-header__text {
-  color: var(--main-text-color);
-}
-
-/* ==========================================================================
-   Index page grid styles.
-   ========================================================================== */
-   
+    Index page grid styles.
+    ========================================================================== */
+    
 .index-grid-container {
   display: grid;
   margin: auto;
@@ -63,19 +30,18 @@ a:active {color: var(--main-text-color)}
 }
 
 /* ==========================================================================
-   Media queries for different breakpoints.
-   ========================================================================== */
+    Media queries for different breakpoints.
+    ========================================================================== */
 
 @media (max-width: 600px){
   /* Index page grid styles.
-   ========================================================================== */
+    ========================================================================== */
   .index-grid-container {
-    display: grid;
     grid-row-gap: 25px;
     padding-top: 25px;
     padding-bottom: 25px;
   }
-   .index-grid-container__cell {
+  .index-grid-container__cell {
     border-top: 3px solid var(--main-text-color);
     border-bottom: 3px solid var(--main-text-color);
   }
@@ -85,9 +51,8 @@ a:active {color: var(--main-text-color)}
 }
 @media (min-width: 601px) and (max-width: 1023px) {
   /* Index page grid styles.
-   ========================================================================== */
+    ========================================================================== */
   .index-grid-container {
-    display: grid;
     grid-gap: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -105,9 +70,8 @@ a:active {color: var(--main-text-color)}
 }
 @media (min-width: 1024px) {
   /* Index page grid styles.
-   ========================================================================== */
+    ========================================================================== */
   .index-grid-container {
-    display: grid;
     grid-gap: 70px;
     padding-top: 70px;
     padding-bottom: 70px;
