--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/layout.css')
+    block extraHead
   body
     a(href="/")
       header(class="brand-header")
