Added update menu page. Added forms to create new menu items and to delete existing menu items. Wrote logic to validate creation of new menu items.

--- a/views/error.pug
+++ b/views/error.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1(style="text-align: center") An error has occurred.
-  h2(style="text-align: center") Error 404: Resource not found.
+  h2(style="text-align: center")=errorMessage
