--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block extraHead
-  link(rel='stylesheet', href='/stylesheets/index.css')
+  link(rel="stylesheet", href="/stylesheets/index.css")
 
 block content
   div(class="index-grid-container")
@@ -17,7 +17,7 @@ block content
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") View Orders
         p(class="index-grid-container__cell__body") View and bump placed orders.
-    a(href="/")
+    a(href="/update")
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") Update Menu
         p(class="index-grid-container__cell__body") Add, edit and remove menu items.
