--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/layout.css')
+    link(rel="stylesheet", href="/stylesheets/layout.css")
     block extraHead
   body
     a(href="/")
