--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -3,44 +3,56 @@
 /* ==========================================================================
     Menu page styles.
     ========================================================================== */
-  .menu-list-container {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
+.menu-list-container {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-  .menu-list-container__item {
-    background-color: var(--main-bg-color);
-  }
+.menu-list-container__item {
+  background-color: var(--main-bg-color);
+}
 
-  .menu-list-container__item__title {
-    color: var(--main-text-color);
-    margin: 5px;
-    overflow-y: hidden;
-    font-size: 1.4em;
-    max-height: 1.6em;
-  }
-  .menu-list-container__item__description {
-    color: var(--main-text-color);
-    font-style: italic;
-    margin: 0 5px 5px 5px;
-    overflow-y: scroll;
-    font-size: 1em;
-    max-height: 2.4em;
-  }
-  .menu-list-container__item__price {
-    color: var(--main-text-color);
-    font-weight: 800;
-    margin: 0 5px 5px 5px;
-  }
+.menu-list-container__item__title {
+  color: var(--main-text-color);
+  margin: 5px;
+  overflow-y: hidden;
+  font-size: 1.4em;
+  max-height: 1.6em;
+}
+.menu-list-container__item__description {
+  color: var(--main-text-color);
+  font-style: italic;
+  margin: 0 5px 5px 5px;
+  overflow-y: scroll;
+  font-size: 1em;
+  max-height: 2.4em;
+}
+.menu-list-container__item__price {
+  color: var(--main-text-color);
+  font-weight: 800;
+  margin: 0 5px 0 5px;
+}
+.menu-list-container__item__button {
+  background-color: #fff;
+  border: 1px solid var(--main-text-color);
+  padding: 3px;
+  margin: 5px;
+}
 
-
+.menu-list-container__item__button--activated {
+  background-color: green;
+  border: 1px solid #000;
+  color: #fff;
+  padding: 3px;
+  margin: 5px;
+}
 
 /* ==========================================================================
      Media queries for different breakpoints.
      ========================================================================== */
   
-     @media (max-width: 600px){
+    @media (max-width: 600px){
       /* Menu page grid styles.
        ========================================================================== */
       .menu-list-container__item {
@@ -48,7 +60,7 @@
         border-top: 2px solid var(--main-text-color);
         border-bottom: 2px solid var(--main-text-color);
       }
-     }
+    }
     @media (min-width: 601px) and (max-width: 1023px) {
       /* Menu page grid styles.
        ========================================================================== */
