--- a/views/menu.pug
+++ b/views/menu.pug
@@ -10,5 +10,6 @@ block content
         h2(class="menu-list-container__item__title")=item.name
         p(class="menu-list-container__item__description")=item.description ? item.description : 'No description provided.'
         p(class="menu-list-container__item__price")='$' + item.price
-        form(action="")
-          submit(class="menu-list-container__item__button") Add to order
+        button(class="menu-list-container__item__button" id=`${item._id}`) Add to order
+  
+  script(type="text/javascript" src="/javascripts/menuScript.js")
