Added cart page. Added functionality for cart page controller to take menu item ids as cookies, query DB and then render the cart page.

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") View Menu
         p(class="index-grid-container__cell__body") View menu items and add them to cart.
-    a(href="/")
+    a(href="/cart")
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") View Cart
         p(class="index-grid-container__cell__body") Remove items from cart and place order. 
