Added orders page.

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") View Cart
         p(class="index-grid-container__cell__body") Remove items from cart and place order. 
-    a(href="/")
+    a(href="/orders")
       div(class="index-grid-container__cell")
         h1(class="index-grid-container__cell__title") View Orders
         p(class="index-grid-container__cell__body") View and bump placed orders.
